--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ailenventaja.github.io/cocktails",
+  "homepage": "https://ailenventaja.github.io/",
   "name": "cocktails",
   "version": "0.1.0",
   "private": true,
